--- a/rotors_simulator/.vscode/settings.json
+++ b/rotors_simulator/.vscode/settings.json
@@ -66,5 +66,17 @@
         "set": "cpp",
         "string": "cpp",
         "string_view": "cpp"
-    }
+    },
+    "python.autoComplete.extraPaths": [
+        "/home/ncrl/research_ws/devel/lib/python2.7/dist-packages",
+        "/home/ncrl/chengcheng_ws/devel/lib/python2.7/dist-packages",
+        "/opt/ros/melodic/lib/python2.7/dist-packages",
+        "/home/ncrl/Desktop/YOLO"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/ncrl/research_ws/devel/lib/python2.7/dist-packages",
+        "/home/ncrl/chengcheng_ws/devel/lib/python2.7/dist-packages",
+        "/opt/ros/melodic/lib/python2.7/dist-packages",
+        "/home/ncrl/Desktop/YOLO"
+    ]
 }
